Pagina de contato e adicao ao carrinho sem dar o refresh na pagina

--- a/DeliveryApp/appsettings.json
+++ b/DeliveryApp/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "SMTP": {
-    "Username": "teste@hotmail.com",
+    "Username": "felipesilva.mello@hotmail.com",
     "DisplayName": "Felipe Mello",
     "Host": "smtp-mail.outlook.com",
-    "Password": "*",
+    "Password": "Felipe180517@",
     "Port": 587
   }
 }
